<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">بوم بوم</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notebook">دفترچه</string>

    <string name="error_network_connection">اشکال در اتصال به اینترنت</string>
    <string name="error_get_data_try_again">اشکال در دریافت اطلاعات، مجددا تلاش نمایید</string>
    <string name="error_server_not_found">سرور در دسترس نمی باشد، مجددا تلاش نمایید</string>
    <string name="error_server_side">بروز خطا در سرور مجددا تلاش نمایید</string>

    <string name="message_sms_access">با دسترسی دادن به خواندن پیامک، ورود به صورت خودکار صورت خواهد پذیرفت</string>
    <string name="request_sms_access">اجازه دسترسی می دهید؟</string>
    <string name="messaged_code">کد پیامک شده</string>
    <string name="error_insert_sms_code">کد پیامک شده را وارد نمایید</string>
    <string name="confirm">تایید</string>
    <string name="message_get_data">درحال دریافت اطلاعات...</string>
    <string name="retry">تلاش مجدد</string>
    <string name="hint_send_key">ما برای شما کد تایید ارسال نموده ایم\nبرای ادامه ، کد را وارد نمایید</string>
    <string name="resend_key">ارسال مجدد کد فعالسازی</string>
    <string name="on">روشن</string>
    <string name="off">خاموش</string>
    <string name="settings">تنظیمات</string>
    <string name="accept">قبول</string>
    <string name="yes">بله</string>
    <string name="exit">خروج</string>
    <string name="inactive_title">لغو اشتراک</string>
    <string name="inactive_desc">ایا میخواهید اشتراک خود را لغو کنید.</string>
    <string name="internet">اینترنت</string>
    <string name="enter">ورود</string>
    <string name="continues">ادامه</string>
    <string name="register_login">ثبت نام | ورود</string>
    <string name="login_register_hint">برای ورود شماره موبایل خود را وارد نمایید</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="send">ارسال</string>
    <string name="message_error_occurred">خطایی رخ داده است</string>
    <string name="autenticate">احراز هویت</string>
    <string name="danger">خطا</string>
    <string name="image_code">کد عکس</string>
    <string name="registerBefore">ابتدا باید ثبت نام کنید!</string>
    <string name="registerBeforeTitle">ثبت نام نکرده اید</string>
    <string name="prizeGiven">دریافت جایزه</string>
    <string name="prizeRequestMsg">مایل به دریافت جایزه می باشید؟</string>
    <string name="prizedeliveryContact">همکاران ما برای جایزه با شما تماس میگیرند!</string>
    <string name="prizeRegistered">جایزه شما ثبت شد</string>

    <!-- intro -->
    <string name="intro_step_1_text">نقاشی در صفحه سفید</string>
    <string name="intro_step_2_text">رنگ آمیزی عکس ها</string>
    <string name="intro_step_3_text">ابزار های نقاشی اینجا هستن</string>
    <string name="intro_step_4">اینو بزن تا با استیکر نقاشی بکشی</string>

    <string name="intro_step_5_setting">تنظیمات صدا</string>
    <string name="intro_step_5_undo">یکی به عقب</string>
    <string name="intro_step_5_exit">خروج</string>
    <string name="intro_step_5_save">ذخیره نقاشی</string>

    <string name="intro_step_6_text">نقاشی های قبلی اینجان</string>

    <string name="intro_step_7_delete">حذف نقاشی</string>
    <string name="intro_step_7_edit">ویرایش</string>
    <string name="intro_step_7_competition">از همه مهم تر تو مسابقه شرکت کنی و برنده بشی</string>
    <string name="intro_step_7_share">اگه تو مسابقه باشی این دکمه نقاشی رو به دوستات برفت تا بهت امتیاز بدن</string>

    <string name="intro_step_8_text">نقاشی خودتو اینجا پیدا کن و بهش امتیاز بده تا اول بشی</string>

    <string name="intro_step_9_text">ببین کیا اولن و رتبه تو چنده(تلاش کن  رای بگیری تا بیای بالا)</string>

    <string name="intro_step_10_text">اینجا نقاشی های خود رو که تو مسابقه شرکت دادی رو میبینی</string>

    <string name="intro_step_11_text">از اینجا نقاشیتو پیدا کن و بهش امتیاز بده</string>

    <string name="intro_step_12_text">از اینجا بگرد</string>

    <string name="intro_step_13_like">با این دکمه امتیاز بده</string>
    <string name="intro_step_14_text">شما با موفقیت ثبت نام کردید و 2000 امتیاز بدست آورید. برای بدست آوردن امتیاز بیشتر ، نقاشی در مسابقه شرکت دهید . هر نقاشی 10 امتیاز</string>
    <string name="message_are_u_sure_exit">مطمئنی می خوای خارج شی ؟</string>
    <string name="point">امتیاز</string>
    <string name="your_prize">جایزه های شما</string>
    <string name="hint_your_gift">با امتیازاتت این جایزه هارو می تونی بگیری</string>
    <string name="messages">پیغام ها</string>
    <string name="about">درباره</string>
    <string name="score_package">بسته های سکه</string>
    <string name="offer_package">بسته های تخفیف</string>
    <string name="competition">مسابقات</string>
    <string name="add_coin">افزایش سکه</string>
    <string name="daily_prize">جایزه شانسی روزانه</string>
    <string name="prize">جایزه</string>
    <string name="price_unit"> تومان</string>
    <string name="coin">سکه</string>
    <string name="hint_shop_message">برای افزایش سکه های خود یکی از بسته های زیر را انتخاب نمایید</string>
    <string name="hint_daily_prize">برای دریافت جایزه خود یکی از بسته های زیر را انتخاب نمایید</string>
    <string name="special_offer">پیشنهاد ویژه</string>
    <string name="my_paints">نقاشی های من</string>
    <string name="reward">پاداش</string>
    <string name="tanks">تشکر</string>
    <string name="new_paint">نقاشی جدید</string>
    <string name="reward_btn">دریافت</string>
    <string name="msg_error_payment">اشکال در برقراری ارتباط، مجددا تلاش نمایید</string>
    <string name="problem">اشکال</string>
    <string name="test_ok">خب</string>
    <string name="msg_select_prize">شانس خودت و امتحان کن و سکه برنده شو</string>
    <string name="total_points">مجموع امتیاز</string>
    <string name="msg_login_for_compatition">برای مشاهده مسابقات وارد شوید</string>
    <string name="msg_login_for_add_coin">برای افزودن سکه وارد شوید</string>
    <string name="msg_login_for_store">برای مشاهده فروشگاه وارد شوید</string>
    <string name="msg_shop_title">از سکه ها برای خرید استیکر می تونی استفاده کنی</string>
    <string name="prizes">جوایز</string>
    <string name="third_place_prize">جایزه نفر سوم</string>
    <string name="second_place_prize">جایزه نفر دوم</string>
    <string name="first_place_prize">جایزه نفر اول</string>
    <string name="msg_your_coin_finished">سکه هات کمه، از بسته های زیر برای افزایش سکه استفاده کن</string>
    <string name="intro_step_7_title">با هر نقاشی می تونی کارهای زیر رو انجام بدی</string>
    <string name="rate_paiting">امتیاز به نقاشی</string>
    <string name="desc_cancel_subscription">کاربران همراه اول برای لغو اشتراک، عبارت "off" را به 3003 ارسال نمایند.
کاربران ایرانسلی که فعالسازی‌شان را از درون اپلیکیشن انجام داده اند، از دکمه لغو اشتراک (در صفحه اصلی گوشه پایین چپ) استفاده نمایند.
کاربران ایرانسلی نیز که از طریق پیامک، فعالسازی انجام داده اند "L39" را به 3003 ارسال نمایند.
\nشماره پشتیبانی : 02153878 داخلی 121
</string>

    <string name="mes_activation">هزینه روزانه برای همراه اول  ۴۰۰ تومان و ایرانسل ۳۰۰ تومان.\nکمتر از قیمت یک بسته چیپس !</string>
    <string name="desc_send_code">"برای فعالسازی کد چهار رقمی ارسال شده از طریق پیامک را وارد نمایید."</string>
    <string name="desc_send_has_key">"برای فعالسازی کد شش رقمی ارسال شده از طریق پیامک را وارد نمایید."</string>
    <string name="msg_irancell_activation">کاربران ایرانسل در صورت دریافت اشتراک، به مدت ۴۸ ساعت و طور کاملا رایگان و بدون کسر هزینه، می توانند از تمامی امکانات برنامه استفاده نمایند</string>
    <string name="msg_mci_activation">در صورت دریافت اشتراک، می توانید از تمامی امکانات برنامه استفاده نمایید</string>
    <string name="title_guide_canecl_registeration">لغو اشتراک</string>
    <string name="msg_enter_phone_number">شماره موبایل خود را وارد نمایید</string>
    <string name="title_chat_notification">پیغام بوم بومی</string>

    <string name="intro_0_msg">استیکر های آماده رو کنار هم بذار و نقاشی های زیبا خلق کن.</string>
    <string name="intro_1_msg">با انتخاب هر استیکر صداشو می شنوی.</string>
    <string name="intro_2_msg">با نقاشی های خودت، تو مسابقه شرکت کن، امتیاز جمع کن و برنده شو</string>
    <string name="intro_3_msg">هر ماه به برنده ها جایزه میدیم، تو هم می تونی با نقاشی هات برنده باشی و جایزه بگیری</string>
    <string name="intro_4_msg">کاربران ایرانسل در صورت دریافت اشتراک، به مدت ۴۸ ساعت و به طور کاملا رایگان و بدون کسر هزینه، می توانند از تمامی امکانات برنامه استفاده نمایند</string>

    <string name="add_title">افزودن</string>
    <string name="title_add_text">انتخاب متن</string>
    <string name="season_prize_title">جوایز فصلی</string>
    <string name="jury_prize_title">جوایز داوران</string>
    <string name="how_to_win_title">نحوه برنده شدن</string>

</resources>
