<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:src="@drawable/handwrite_arrow_down"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:scaleX="-1"
        android:rotation="120"
        />

    <psb.com.customView.CustomTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/white_1"
        android:textSize="@dimen/text_size_too_large"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/space_normal"
        android:paddingTop="@dimen/space_normal"
        android:text="این دکمه این کارها رو انجام می ده"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/rel_btn"
            android:layout_width="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/space_15">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/btn_settings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/space_small"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_settings" />

                <psb.com.customView.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_settings"
                    android:textColor="@color/white_1"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/intro_step_5_setting"
                    android:layout_marginLeft="10dp"
                    android:gravity="right|center"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_small"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/btn_undo"
                    android:layout_width="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="40dp"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/space_small"

                    android:src="@drawable/btn_undo"

                    />


                <psb.com.customView.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_undo"
                    android:textColor="@color/white_1"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/intro_step_5_undo"
                    android:layout_marginLeft="10dp"
                    android:gravity="right|center"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_small"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/btn_cancel"
                    android:layout_width="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="40dp"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/space_small"

                    android:src="@drawable/btn_close"

                    />


                <psb.com.customView.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_cancel"
                    android:textColor="@color/white_1"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/intro_step_5_exit"
                    android:layout_marginLeft="10dp"
                    android:gravity="right|center"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_small"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/btn_save"
                    android:layout_width="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="40dp"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/space_small"

                    android:src="@drawable/btn_check"

                    />


                <psb.com.customView.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_save"
                    android:textColor="@color/white_1"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/intro_step_5_save"
                    android:layout_marginLeft="10dp"
                    android:gravity="right|center"
                    />


            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>