<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



            <RelativeLayout
                android:id="@+id/rel_parent"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/space_normal"
                android:padding="@dimen/space_normal"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/frg_sendPhoneNumber_btn"
                    android:layout_below="@+id/rel_title"
                    android:layout_marginBottom="-40dp"
                    android:layout_marginRight="@dimen/space_normal"
                    android:layout_marginTop="-36dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_dialog_bgr" />


                <RelativeLayout
                    android:id="@+id/rel_title"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/img_handle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/handle" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <psb.com.customView.CustomTextViewBold
                            android:id="@+id/text_title_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:paddingBottom="@dimen/space_small"
                            android:scaleX="1.0"
                            android:scaleY="1.1"
                            android:text="@string/register_login"
                            android:textColor="#7ca331"
                            android:textSize="15sp" />

                        <psb.com.customView.CustomTextViewBold
                            android:id="@+id/text_title_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:paddingBottom="@dimen/space_small"
                            android:text="@string/register_login"
                            android:textColor="@color/white_1"
                            android:textSize="15sp" />
                    </RelativeLayout>

                </RelativeLayout>

                <ImageView
                    android:id="@+id/icon_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/space_normal"
                    android:paddingBottom="@dimen/space_small"
                    android:paddingLeft="@dimen/space_small"
                    android:paddingTop="@dimen/space_small"
                    android:src="@drawable/btn_close" />

                <RelativeLayout
                    android:id="@+id/rel_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_save"
                    android:layout_below="@+id/rel_title"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="-20dp"
                    android:layout_toLeftOf="@+id/icon_back"
                    android:orientation="horizontal"
                    android:padding="@dimen/space_small">

                    <psb.com.customView.CustomTextViewBold
                        android:id="@+id/text_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/space_small"
                        android:text="@string/login_register_hint"
                        android:textColor="@color/brown_3"
                        android:textSize="@dimen/text_size_normal" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_hint"
                        android:layout_centerHorizontal="true">

                        <psb.com.customView.CustomTextViewBold
                            android:id="@+id/text_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/message_error_occurred"
                            android:textColor="@color/md_red_900"
                            android:textSize="@dimen/font_size_12"
                            android:visibility="gone" />

                        <RelativeLayout
                            android:id="@+id/rel_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_error"
                            android:layout_marginLeft="@dimen/margin_50"
                            android:layout_marginRight="@dimen/margin_50">

                            <psb.com.customView.CEditTextBold
                                android:id="@+id/text_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/margin_50"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="@dimen/margin_5"
                                android:layout_toLeftOf="@+id/icon_phone_number"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                                android:hint="@string/phone_number"
                                android:inputType="number"
                                android:imeOptions="actionDone"
                                android:maxLength="11"
                                android:paddingLeft="25dp"
                                android:textColor="@color/brown_3"
                                android:textColorHint="@color/brown_2"
                                android:textSize="@dimen/text_size_normal" />

                            <psb.com.customView.IconFont
                                android:id="@+id/icon_phone_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:text=""
                                android:textColor="@color/brown_2"
                                android:textSize="25dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_alignLeft="@+id/text_phone_number"
                                android:layout_alignRight="@+id/icon_phone_number"
                                android:layout_below="@+id/text_phone_number"
                                android:layout_marginTop="@dimen/margin_5"
                                android:background="@color/colorPrimaryDark" />

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_alignLeft="@+id/rel_phone_number"
                            android:layout_alignRight="@+id/rel_phone_number"
                            android:layout_below="@+id/rel_phone_number"
                            android:background="@color/colorPrimary" />

                        <ProgressBar
                            android:id="@+id/progressBar7"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/rel_phone_number"
                            android:layout_alignLeft="@+id/rel_phone_number"
                            android:layout_alignTop="@+id/rel_phone_number"
                            android:indeterminate="true"
                            android:visibility="gone" />


                    </RelativeLayout>


                </RelativeLayout>

                <psb.com.customView.CButton
                    android:id="@+id/frg_sendPhoneNumber_btn"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/rel_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space_normal"
                    android:background="@drawable/btn_rect"
                    android:paddingBottom="@dimen/space_small"
                    android:text="@string/send"
                    android:textColor="@color/white_1"
                    android:textSize="@dimen/text_size_large" />

            </RelativeLayout>



</RelativeLayout>
